[package]
name = "remap"
version = "0.1.0"
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
yew = "0.6.0"
serde = "1.0.88"
serde_derive = "1.0.88"
failure = "0.1.5"
stdweb = "0.4.15"
serde_json = "1.0.39"
libmath = "0.2.1"
itertools = "0.8.0"
uuid = { version = "0.7.4", features = [ "stdweb", "v4" ] }
googleprojection = "1.1.0"
