[package]
name = "remap"
version = "0.1.0"
authors = ["alamminsalo <antti.lamminsalo@protonmail.com>"]
edition = "2018"

[profile.release]
lto = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.10.0"
serde = "1.0.88"
serde_derive = "1.0.88"
failure = "0.1.5"
stdweb = "0.4"
wasm-bindgen = "0.2"
serde_json = "1.0.39"
libmath = "0.2.1"
wee_alloc = "0.4.4"
itertools = "0.8.0"
googleprojection = "1.1.0"
